--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
-body {
+@font-face {
+  font-family: Campton;
+  src: url('./Campton/CamptonMedium.otf');
+}
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
